--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --headed --slowmo=500 --screenshot only-on-failure
+addopts = --headed --slowmo=500 --alluredir=allure-results --screenshot only-on-failure
